# invasive_species_mapping

./: .gitignore  CLAUDE.md  LICENSE  Phase_0_Build_Roadmap.md  README.md  justfile  pyproject.toml
configs/: labels_schema.yaml  pipeline.yaml
data/labels/bioscape_inat/: README.md
data/labels/mapwaps_olifants_doring/: README.md
data/labels/raw/BioSCape_VegPlots_Berg_Eerste_2425/: README.md
data/labels/raw/sanlc_2022/: README.md
data/labels/raw/sanlc_accuracy_points/: README.md
data/labels/raw/vegmap_2024/: README.md
download/: README.md  bioscape_inat.py  mapwaps.py  mapwaps_olifants_doring.py
scripts/: audit_chips.py  bench_mpc_reads.py  plot_chips.py
src/cmrv/: __init__.py  aoi.py  cli.py  infer.py  io.py
src/cmrv/chips/: stats.py
src/cmrv/embeddings/: __init__.py  bakeoff.py  base.py  claysr.py  embed.py  head.py  probe.py  universat.py
src/cmrv/ingest/: chips.py  cloud_mask.py  composite.py  stac.py  stats.py
src/cmrv/label_finder/data/: invasive_tree_articles.csv
src/cmrv/labels/: __init__.py  audit.py  bioscape.py  classmap.py  fuse.py  gbif.py  mapwaps.py  merge.py  nemba.py  nlc.py  observations.py  sanlc.py  vegmap.py
tasks/: lessons.md  todo.md
tests/: test_aoi.py  test_audit.py  test_bioscape_geometry.py  test_chip_batching.py  test_chip_reconcile.py  test_chips_stats.py  test_classmap.py  test_cli.py  test_embeddings.py  test_fuse.py  test_ingest.py  test_io.py  test_labels_observations.py  test_mapwaps.py  test_merge.py  test_months.py  test_nlc_sample.py  test_sanlc.py
